--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 	<description>KafkaStream</description>
 
 	<properties>
-		<java.version>17</java.version>
+		<java.version>12</java.version>
 	</properties>
 
 	<dependencies>
@@ -41,6 +41,12 @@
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka-test</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
